--- a/src/www/css/ionic.app.css
+++ b/src/www/css/ionic.app.css
@@ -9760,11 +9760,16 @@ i {
   float: right; }
 
 .home-button-option {
-  height: 30px;
+  flex-grow: 1;
+  padding: 7px;
   font-size: small;
   min-height: 0px;
-  line-height: 0px;
+  line-height: 15px;
   color: whitesmoke !important; }
+
+.options-col {
+  flex-direction: column;
+  display: flex; }
 
 .home-div-cardHeaderRow {
   margin-bottom: 5px; }
